--- a/Customer_CRM/src/main/resources/application.yml
+++ b/Customer_CRM/src/main/resources/application.yml
@@ -2,8 +2,9 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/customermanage
     username: root
-    password: 1234
+    password: sahan@sql
 
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: update
